[gd_scene load_steps=23 format=3 uid="uid://dlqmunvanqxus"]

[ext_resource type="Texture2D" uid="uid://cpvn6l3j80dmy" path="res://Assets/enemies/laser/laserTile.png" id="1_hll5x"]
[ext_resource type="Script" uid="uid://c0d1dvfhyh2l1" path="res://scenes/entities/laser_fish.gd" id="1_vpuyx"]
[ext_resource type="AudioStream" uid="uid://dar0wniqumocu" path="res://Assets/sounds/lasercharge.ogg" id="2_41bec"]
[ext_resource type="AudioStream" uid="uid://cj6pr7qsvm0en" path="res://Assets/sounds/enemie/laserBlast.ogg" id="2_hrlvu"]
[ext_resource type="Texture2D" uid="uid://nfnx741ix3dy" path="res://Assets/enemies/laserFishdead.png" id="4_iluj3"]
[ext_resource type="Texture2D" uid="uid://ci8dkded6hay0" path="res://Assets/enemies/laserFish.png" id="4_s8s5e"]
[ext_resource type="AudioStream" uid="uid://cessjy0ar4vg2" path="res://Assets/sounds/enemie/normExplosion.ogg" id="5_quvlu"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hll5x"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 38.41
direction = Vector3(-1, 0, 0)
spread = 0.0
initial_velocity_min = 1.0
initial_velocity_max = 1.0
gravity = Vector3(0, 0, 0)
linear_accel_min = 1000.0
linear_accel_max = 1000.0
scale_min = 140.0
scale_max = 140.0
color = Color(1, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_quvlu"]
colors = PackedColorArray(1, 0.6, 0, 1, 1, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_iluj3"]
gradient = SubResource("Gradient_quvlu")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_yifll"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
direction = Vector3(1, -5, 0)
spread = 180.0
flatness = 0.57
initial_velocity_max = 15.0
gravity = Vector3(0, -6000, 0)
scale_min = 250.0
scale_max = 250.0
color = Color(1, 0, 0, 1)
color_initial_ramp = SubResource("GradientTexture1D_iluj3")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3l436"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
spread = 180.0
initial_velocity_min = 5.0
initial_velocity_max = 10.0
gravity = Vector3(0, -9000, 0)
scale_min = 250.0
scale_max = 250.0
color = Color(1, 0.40600002, 0.00999999, 1)

[sub_resource type="Gradient" id="Gradient_s8s5e"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_quvlu"]
gradient = SubResource("Gradient_s8s5e")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_iluj3"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
spread = 180.0
initial_velocity_min = 4.0
initial_velocity_max = 5.0
gravity = Vector3(0, -5000, 0)
scale_min = 50.0
scale_max = 50.0
color_ramp = SubResource("GradientTexture1D_quvlu")

[sub_resource type="Animation" id="Animation_s8s5e"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_quvlu"]
resource_name = "fadeOut"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.083333336, 0, 0, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.083333336, 0, 0, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.083333336, 0, 0, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.083333336, 0.16666667, 0, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="Animation" id="Animation_hrlvu"]
resource_name = "laserIn"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.06666667, -0.02043488, 1.9, -0.099999994, -0.062108874, 0, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(2, 0),
"points": PackedFloat32Array(13.506366, 0, 0, 0.11111112, -2.1898885, 1, -0.16666667, 0.38240272, 0, 0),
"times": PackedFloat32Array(0.033333335, 0.6666667)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(2, 0),
"points": PackedFloat32Array(14.139331, 0, 0, 0.11111112, -2.1898885, 1, -0.16666667, 0.38240272, 0, 0),
"times": PackedFloat32Array(0, 0.6666667)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(2, 0),
"points": PackedFloat32Array(14.139331, 0, 0, 0.11111112, -2.1898885, 1, -0.16666667, 0.38240272, 0, 0),
"times": PackedFloat32Array(0, 0.6666667)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(2, 0),
"points": PackedFloat32Array(1, 0, 0, 0.11111112, 0, 1, -0.16666667, 0, 0, 0),
"times": PackedFloat32Array(0, 0.6666667)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_quvlu"]
_data = {
&"RESET": SubResource("Animation_s8s5e"),
&"fadeOut": SubResource("Animation_quvlu"),
&"laserIn": SubResource("Animation_hrlvu")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_hll5x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hrlvu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vpuyx"]

[node name="laserFish" type="CharacterBody2D" groups=["objects"]]
scale = Vector2(12, 12)
script = ExtResource("1_vpuyx")

[node name="laserBlast" type="AudioStreamPlayer2D" parent="."]
scale = Vector2(2.7495773, 6.453456)
stream = ExtResource("2_hrlvu")
volume_db = 10.0
max_distance = 99999.0

[node name="laserCharge" type="AudioStreamPlayer2D" parent="."]
scale = Vector2(2.7495773, 6.4534554)
stream = ExtResource("2_41bec")
volume_db = 5.0
max_distance = 99999.0

[node name="invulenrablePolygon" type="Polygon2D" parent="."]
z_index = -10
position = Vector2(47.16666, -225.91667)
scale = Vector2(1.1013844, 1.1013844)
color = Color(0.9050328, 0.7067926, 0, 1)
offset = Vector2(178, 135)
polygon = PackedVector2Array(-365.56696, 35.694275, -316.76477, 9.817749, -266.44928, 4.370056, -215.60419, 6.942566, -178.22699, 20.107819, -155.22563, 35.694275, -64.4308, -14.621201, -45.81787, 8.90979, -90.91263, 37.13185, -90.91263, 101.444855, -48.61737, 130.04523, -64.88478, 155.54343, -119.81564, 130.04523, -154.16635, 112.340225, -208.03795, 135.41724, -277.42032, 141.77289, -337.11792, 129.96954, -378.3539, 100.536896, -396.4372, 71.93654)
uv = PackedVector2Array(-389, 29, -277, -18, -179, -23, -124, 9, -94, 67, -24, -13, -38, 171, -93, 102, -136, 141, -163, 149, -233, 151, -276, 149, -338, 114, -391, 67, -408, 42)

[node name="dead" type="Sprite2D" parent="."]
position = Vector2(-19.916666, 10.749999)
scale = Vector2(0.16078296, 0.16078296)
texture = ExtResource("4_iluj3")

[node name="alive" type="Sprite2D" parent="."]
scale = Vector2(0.16078296, 0.16078296)
texture = ExtResource("4_s8s5e")

[node name="laserRay" type="RayCast2D" parent="."]
scale = Vector2(11.213895, 2.1255193)
target_position = Vector2(-99999, 50)

[node name="fishDetector" type="RayCast2D" parent="."]
scale = Vector2(2.8440707, 19.017479)
target_position = Vector2(-999999, 0)

[node name="fishFinder" type="RayCast2D" parent="."]
modulate = Color(1, 0.72800004, 0.04000002, 1)
scale = Vector2(-1.0947801, 12.172503)
target_position = Vector2(-99999, 0)

[node name="laserTelegraph" type="GPUParticles2D" parent="."]
z_index = -10
position = Vector2(-55, 0)
scale = Vector2(2.1189368, 1.2719063)
emitting = false
amount = 50
lifetime = 16.0
one_shot = true
speed_scale = 8.0
explosiveness = 0.55
fixed_fps = 0
visibility_rect = Rect2(-9999, -9999, 99999, 99999)
draw_order = 0
process_material = SubResource("ParticleProcessMaterial_hll5x")

[node name="deathSploison" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-55.083336, 0.5)
scale = Vector2(65.357445, 25.686255)
stream = ExtResource("5_quvlu")
max_distance = 99999.0

[node name="deathparticle2" type="GPUParticles2D" parent="."]
position = Vector2(-55.083336, 0.5)
scale = Vector2(65.357445, 25.686255)
emitting = false
amount = 250
lifetime = 5.0
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_yifll")

[node name="deathParticle1" type="GPUParticles2D" parent="."]
position = Vector2(-57.916664, -4.7499943)
scale = Vector2(65.357445, 25.686255)
emitting = false
amount = 150
lifetime = 3.0
speed_scale = 2.0
process_material = SubResource("ParticleProcessMaterial_3l436")

[node name="steam2" type="GPUParticles2D" parent="."]
z_index = 200
position = Vector2(22.916668, -18.333332)
scale = Vector2(16.250502, 9.850875)
emitting = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_iluj3")

[node name="steam1" type="GPUParticles2D" parent="."]
z_index = 200
position = Vector2(20.416668, 26.749998)
scale = Vector2(12.356838, 6.721292)
emitting = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_iluj3")

[node name="laser" type="Line2D" parent="."]
z_index = -100
scale = Vector2(1.9, 1e-05)
points = PackedVector2Array(0, 0, -500, 0)
width = 25.39
texture = ExtResource("1_hll5x")
texture_mode = 2
joint_mode = 2
begin_cap_mode = 1
end_cap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="laser"]
libraries = {
&"": SubResource("AnimationLibrary_quvlu")
}

[node name="hurtbox" type="Area2D" parent="." groups=["dangerObj", "enemies", "enemyHitbox", "objects"]]
position = Vector2(-35.333332, 0)
scale = Vector2(7.8417873, 7.8417873)

[node name="hurtBox" type="CollisionShape2D" parent="hurtbox" groups=["objects"]]
position = Vector2(-1.7853074, 0.4888341)
scale = Vector2(1.5757681, 0.85711217)
shape = SubResource("CircleShape2D_hll5x")
debug_color = Color(0.91123164, 0, 0.072628535, 0.41960785)

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox" groups=["objects"]]
position = Vector2(19.308949, -0.09564148)
rotation = 1.5685529
scale = Vector2(-0.2580011, 0.18205301)
shape = SubResource("RectangleShape2D_hrlvu")
debug_color = Color(0.9182245, 0.2353065, 0.41794148, 0.41960785)

[node name="hitBox" type="CollisionShape2D" parent="." groups=["objects"]]
position = Vector2(-57.000004, 4.25)
scale = Vector2(9.321794, 4.964109)
shape = SubResource("CircleShape2D_vpuyx")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 1000.0
target_desired_distance = 1000.0
path_max_distance = 500.0
path_postprocessing = 1
debug_use_custom = true
debug_path_custom_color = Color(1, 0.32, 0.32, 1)
debug_path_custom_point_size = 185.15
debug_path_custom_line_width = 50.0

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="navigation_finished" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_navigation_finished"]
